--- a/submission/views/resume.html
+++ b/submission/views/resume.html
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hobbies.html">Hobbies</a>
+              <a class="nav-link" href="submission/views/hobbies.html">Hobbies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="resume.html">Resume</a>
