--- a/submission/views/resume.html
+++ b/submission/views/resume.html
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <a href="GregoryLowmanResume.pdf" target="_blank" download="GregLowmanResume.pdf">
+      <button>Download PDF</button>
+    </a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Gregory Lowman</a>
